--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
       href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
       rel="stylesheet"
     />
-    <title>Grid.js Hello World</title>
+    <title>Countries</title>
   </head>
   <body>
-    <h1>Grid.js Hello World</h1>
-    <button id="new-search" hidden>New search</button>
+    <h1>Make a search and get info on the countries matching the search criteria</h1>
     <form id="form">
       <select name="search by" id="select-search-by">
         <option value="name" selected>search by name</option>
@@ -21,7 +20,7 @@
       <input type="text" placeholder="search..." required />
       <button type="submit">Get data</button>
     </form>
-
+    <br/>
     <div id="wrapper"></div>
     <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
 
